# bazel_pigweed_zephyr

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  bootstrap.sh  pigweed.json  step-by-step.md
apps/hello_world/: BUILD.bazel  hello_world.cc
targets/mimxrt595_evk/: .bazelrc  BUILD.bazel  pigweed.json  prj.conf
